[gd_scene load_steps=8 format=3 uid="uid://vncxhin0f6pr"]

[ext_resource type="Script" path="res://Scenes/Levels/level1.gd" id="1_icd8v"]
[ext_resource type="PackedScene" uid="uid://dchbd6novsg0o" path="res://Bull/bull.tscn" id="2_tbqab"]
[ext_resource type="PackedScene" uid="uid://c7m1richxkw1d" path="res://World/world.tscn" id="3_pwo4p"]
[ext_resource type="PackedScene" uid="uid://b5ka4q4vq1vpx" path="res://Player/player.tscn" id="4_01rhx"]
[ext_resource type="PackedScene" uid="uid://b1wgltiptih6h" path="res://Timer/game_timer.tscn" id="5_gqqyv"]

[sub_resource type="Animation" id="Animation_87iar"]
resource_name = "camera_around_arena"
length = 8.0
loop_mode = 1
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 30, 17, 2, 1, -17, 30, 0, 4, 1, 0, 30, -17, 6, 1, 17, 30, 0, 8, 1, 0, 30, 17)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, -0.573576, 0, 0, 0.819152, 2, 1, -0.40558, -0.579228, -0.40558, 0.579228, 4, 1, -2.50718e-08, 0.819152, 0.573576, 3.58063e-08, 6, 1, -0.40558, 0.579228, 0.40558, 0.579228, 8, 1, -0.573576, 0, 0, 0.819152)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m8pya"]
_data = {
"camera_around_arena": SubResource("Animation_87iar")
}

[node name="Level_1" type="Node"]
script = ExtResource("1_icd8v")
mob_scene = ExtResource("2_tbqab")

[node name="World" parent="." instance=ExtResource("3_pwo4p")]

[node name="Light" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 10.4713, 0)
light_energy = 2.137

[node name="Player" parent="." instance=ExtResource("4_01rhx")]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.342021, 0.939693, 0, -0.939693, 0.342021, 0, 30, 17)
current = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera3D"]
autoplay = "camera_around_arena"
libraries = {
"": SubResource("AnimationLibrary_m8pya")
}

[node name="MobTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="GameTimer" parent="." instance=ExtResource("5_gqqyv")]

[node name="Tutorial" type="Control" parent="."]
top_level = true
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -546.0
offset_top = 30.0
offset_right = -546.0
offset_bottom = 30.0
grow_horizontal = 2

[node name="Welcome" type="Label" parent="Tutorial"]
layout_mode = 1
offset_right = 359.0
offset_bottom = 52.0
text = "Добро пожаловать в Испанию!
Коррида ждет новых участников!"

[node name="Matador" type="Label" parent="Tutorial"]
visible = false
layout_mode = 0
offset_right = 359.0
offset_bottom = 52.0
text = "А вот и наш Матадор!
Поприветствуем его!"

[node name="Rotation" type="Label" parent="Tutorial"]
visible = false
layout_mode = 0
offset_right = 359.0
offset_bottom = 52.0
text = "Нажмите на A или D для вращения"

[node name="Space" type="Label" parent="Tutorial"]
visible = false
layout_mode = 0
offset_right = 359.0
offset_bottom = 52.0
text = "Нажмите на Пробел для уклонения"

[node name="Hit" type="Label" parent="Tutorial"]
visible = false
layout_mode = 0
offset_right = 359.0
offset_bottom = 52.0
text = "Нажмите на W для удара"

[node name="Health" type="Label" parent="Tutorial"]
visible = false
layout_mode = 0
offset_right = 359.0
offset_bottom = 52.0
text = "Это Ваше здоровье, их всего 2.
Будьте аккуратны!"

[node name="Start" type="Label" parent="Tutorial"]
visible = false
layout_mode = 0
offset_right = 359.0
offset_bottom = 52.0
text = "Начнем тренировку против быков!
Продержись 15 секунд!"

[node name="Сontinue" type="Button" parent="Tutorial"]
layout_mode = 1
offset_left = 1.0
offset_top = 57.0
offset_right = 112.0
offset_bottom = 88.0
text = "Продолжить
"

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="pressed" from="Tutorial/Сontinue" to="." method="_on_button_pressed"]
